# paykit-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
paykit-lib/: Cargo.toml  README.md
paykit-lib/src/: lib.rs
paykit-lib/src/transport/: mod.rs  traits.rs
paykit-lib/src/transport/pubky/: authenticated_transport.rs  mod.rs  unauthenticated_transport.rs
