[package]
name = "paykit-lib"
version = "0.0.1"
authors = ["denys@synonym.to"]
description = "Paykit library implementation"
license = "MIT"
edition = "2021"

[features]
default = ["pubky"]
pubky = ["dep:pubky"]

[dependencies]
async-trait = "0.1.89"
pubky = { version = "0.6.0-rc.6", optional = true }
tokio = "1.48.0"

[dev-dependencies]
pubky-testnet = { version = "0.6.0-rc.6" }

